Change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Gucin/alipay-sdk-php",
+    "name": "gucinchoi/alipay-sdk-php",
     "type": "library",
     "description": "alipay php sdk",
     "license": "Apache",
